adjusts some alignment issues in the header

--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,10 @@ main {
 
 header {
   float: left;
-  margin: 5px 30px 40px 0;
+  margin: 1px 30px 40px 0px;
   color: rgba(17, 16, 16, 0.9);
   font-style: italic;
+  font-size: 8px;
 }
 
 a {
@@ -117,33 +118,28 @@ footer {
   padding-top: 3px;
 }
 
-/* For extremely small screen devices (595px and below) */
-@media only screen and (max-width: 595px) {
-
-}
- 
-/* Small screen devices (600px and above) */
-@media only screen and (min-width: 600px) {
-
-}
  
 /* Medium screen devices (768px and above) */
 @media only screen and (max-width: 768px) {
 
-img {
-  max-width: 100%;
-  height: auto;
-}
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 
-p {
-  font-size: .9em;
-}
+  .nav-item:hover {
+    margin-left: 150px;
+  }
 
-a {
-  font-size: .9em;
-}
+  p {
+    font-size: .9em;
+  }
 
-.icon-links {
-  max-width: 40px;
-}
+  a {
+    font-size: .9em;
+  }
+
+  .icon-links {
+    max-width: 40px;
+  }
 }
